# Todo

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: quality_control.yml
tests/controllers/: test_web_controller.py
tests/core/: test_interator.py
tests/repositories/: test_db_task_repo.py
todo/: __main__.py
todo/controllers/: web_controller.py
todo/core/: __init__.py  domain.py  interactor.py
todo/repositories/: __init__.py  db_task_repo.py
